--- a/InteractiveMusicInstrumentClassifier.ipynb
+++ b/InteractiveMusicInstrumentClassifier.ipynb
@@ -11,6 +11,7 @@
    "outputs": [],
    "source": [
     "from fastai.vision.all import *\n",
+    "from fastai.vision.widgets import *\n",
     "path = Path('./instruments_data')\n",
     "learn = load_learner(path/'export.pkl', cpu=True)\n"
    ]
@@ -69,7 +70,7 @@
    ]
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "execution_count": null,
    "metadata": {
     "gradient": {
