--- a/InteractiveMusicInstrumentClassifier.ipynb
+++ b/InteractiveMusicInstrumentClassifier.ipynb
@@ -11,6 +11,8 @@
    "outputs": [],
    "source": [
     "from fastai.vision.all import *\n",
+    "from fastai.vision.widgets import *\n",
+    "\n",
     "path = Path('./instruments_data')\n",
     "learn = load_learner(path/'export.pkl', cpu=True)\n"
    ]
