--- a/InteractiveMusicInstrumentClassifier.ipynb
+++ b/InteractiveMusicInstrumentClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "gradient": {
      "editing": false
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "gradient": {
      "editing": false
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "gradient": {
      "editing": false
@@ -44,12 +44,22 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a2e571171ba412481a8fb9770bd11a1",
+       "model_id": "15992073d7bf4ee2b818bc2b6238d740",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(Label(value='Select your instrumen!'), FileUpload(value={}, description='Upload'), Output(), La…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -62,7 +72,7 @@
     "    img = PILImage.create(btn_upload.data[-1])\n",
     "    out_pl.clear_output()\n",
     "    with out_pl: display(img.to_thumb(128,128))\n",
-    "    pred,pred_idx,probs = learn_inf.predict(img)\n",
+    "    pred,pred_idx,probs = learn.predict(img)\n",
     "    lbl_pred.value = f'Prediction: {pred}; Probability: {probs[pred_idx]:.04f}'\n",
     "    \n",
     "btn_upload.observe(on_data_change, names=['data'])\n",
